Alignment Fixes

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -92,6 +92,9 @@
 .w100 {
     width: 100% !important;
 }
+.h100 {
+    height: 100% !important;
+}
 .left {
     float: left !important;
 }
