--- a/src/pages/seatslayout/seatslayout.scss
+++ b/src/pages/seatslayout/seatslayout.scss
@@ -75,9 +75,10 @@ page-seatslayout {
         border: 1px solid #07C393;
     }
     .title_a {
-        color: #AB9EB8;
-        font-size: 16px;
-        margin-top: 6px;
+        // color: #AB9EB8;
+        font-size: 110%;
+        text-align: center;
+        text-transform: capitalize;
     }
     .title_section {
         color: #AB9EB8;
@@ -140,14 +141,6 @@ page-seatslayout {
         height: 1px;
         color: #F8F8F8;
     }
-        // .seat_block{
-        //     height: 25px;
-        //     width: 20px;
-        //     border-radius: 8px;
-        //     background-color: #D7D7D7;
-        //     color: black;
-        //     padding: 0px 10px;
-        //  }
     .seat_block1 {
         height: 24px;
         width: 24px;
@@ -164,59 +157,29 @@ page-seatslayout {
         color: black;
         font-size: 10px;
     }
-    // .block_number{
-    // height: 25px;
-    // width: 20px;
-    // border-radius: 8px;
-    // background-color: #D7D7D7;
-    //  }
-// .row_ticketblock{
-//     // overflow: auto;
-//     // white-space: nowrap;
-//     // display: inline-block;
-// }
-// .ticketblock .ion-col{
-//     // display: inline-block;
-//     // white-space: nowrap;
-
-// }   
-
-
-.imageDiv .col_block {
-    box-shadow: 1px 1px 10px #999;
-    margin: 2px;
-    max-height: 60px;
-    cursor: pointer;
-    display:inline-block;
-    *display:inline;/* For IE7*/
-    *zoom:1;/* For IE7*/
-    vertical-align:top;
-    white-space: nowrap;
-    display: inline-block;
-    height: 60px;
-    width: 60px;
-    object-fit: cover;
-
- }
- .imageDiv{
-    margin-top: 15px;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    height: 60px;
-    white-space:nowrap
- }
-//  .button-md{ 
-//     margin-top: 15px;
-//     width: 100%;
-//     height: 40px;
-//     border-radius: 5px;
-//     font-size: 16px;
-//     font-weight: bold;
-//     border-color: #c22e5e;
-//     background: linear-gradient(#a32d66, #c22e5e);
-//     // background-color: #BB3161;
-// }
-.submit{
+    .imageDiv .col_block {
+        box-shadow: 1px 1px 10px #999;
+        margin: 2px;
+        max-height: 60px;
+        cursor: pointer;
+        display:inline-block;
+        *display:inline;/* For IE7*/
+        *zoom:1;/* For IE7*/
+        vertical-align:top;
+        white-space: nowrap;
+        display: inline-block;
+        height: 60px;
+        width: 60px;
+        object-fit: cover;
+    }
+    .imageDiv {
+        margin-top: 15px;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        height: 60px;
+        white-space:nowrap;
+    }
+    .submit {
         width: 83%;
         border-radius: 12px;
         margin: auto;
@@ -224,11 +187,10 @@ page-seatslayout {
         background: linear-gradient(#a32d66, #c22e5e);
         margin-top: 20px;
         margin-bottom: 10px;
-    }
-   
-    .submit .content-md{
-    color: #000;
-    background-color: transparent;
+    }   
+    .submit .content-md {
+        color: #000;
+        background-color: transparent;
     }
     .content-md{
         color: #000;
@@ -236,5 +198,16 @@ page-seatslayout {
     }
     ion-col > div {
         float: left;
+    }
+    ion-col.seats {
+        padding: 2px;
+    }
+    ion-col .row-col {
+        padding-left: 0px;
+    }
+    button.row-name {
+        width: 25px;
+        border-radius: 4px;
+        font-weight: 600;
     }
 }
